# fastapi-postgres-service

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  starship.toml
api/: alembic.ini  pyproject.toml  pytest.ini  ruff.toml
api/alembic/: env.py
api/alembic/versions/: 0d9f0e3234c9_initial_schema.py  ab67cbad7118_add_test_data.py
api/app/: database.py  errors.py  main.py  settings.py
api/app/crud/: base_crud.py  comment_crud.py  history_crud.py  part_crud.py  user_crud.py
api/app/models/: comment_model.py  history_model.py  part_model.py  user_model.py
api/app/models/mixins/: blameable_mixin.py  created_at_mixin.py  created_by_mixin.py  id_mixin.py  soft_deletable_mixin.py
api/app/routers/: comment_router.py  part_router.py
api/app/schemas/: base_schemas.py  comment_schemas.py  history_schemas.py  part_schemas.py  user_schemas.py
api/app/utils/: alembic_utils.py  get_comment_exist.py  get_current_user.py  get_part_exist.py
api/tests/: conftest.py  utils.py
api/tests/comments/: conftest.py  test_comments.py
api/tests/parts/: conftest.py  test_parts.py
docker/db/init/: 01-create-test-db.sql
